@@ -3,4 +3,5 @@ include Modules/*.c Modules/*.h Modules/LICENSE
 recursive-include Build *.cfg*
 recursive-include Lib *.py
 recursive-include Demo *.py
+include tox.ini
 recursive-include Tests *.py
