@@ -1,0 +1,15 @@
+"""
+python-ldap tests module package
+"""
+
+import t_cext 
+import t_ldap_dn 
+import t_ldap_filter 
+import t_ldap_functions 
+import t_ldap_modlist 
+import t_ldap_schema_tokenizer 
+import t_ldapurl 
+import t_ldif 
+import t_search 
+
+import slapd
