@@ -1,6 +1,10 @@
 ----------------------------------------------------------------
 Released 2.4.32 2017-02-14
 
+Running tests made easier:
+- python setup.py test
+- added tox.ini
+
 ----------------------------------------------------------------
 Released 2.4.31 2017-02-14
 
@@ -1332,4 +1336,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.408 2017/02/14 21:36:01 stroeder Exp $
+$Id: CHANGES,v 1.409 2017/02/14 21:38:13 stroeder Exp $
